--- a/README
+++ b/README
@@ -1,6 +1,7 @@
 Dependencies:
 - nightly Rust (won't build on stable)
-- bindgen installed to $PATH: run 'cargo install bindgen'
+- rust-bindgen installed to $PATH: run 'cargo install bindgen' (and wait, and
+  wait...)
 - python2.7
 
 To build yasce, install a nightly Rust, and run
@@ -12,3 +13,7 @@ Or for a debug version:
     make -j8 out/yasce
 
 You can also build out/exectool, which is in development.
+
+The release version is statically linked, except for libc; the debug version is
+dynamically linked against both dylibs corresponding to the crates and the
+standard library.
